# RoboMaster

./: README.md
Rander/: CMakeLists.txt  camerathread.cpp  camerathread.h  informationupdater.cpp  informationupdater.h  main.cpp  mapscene.cpp  mapscene.h  numellipseitem.cpp  numellipseitem.h  radar.cpp  radar.h  radar.ui  radar.ui.fVAPxJ  streamscene.cpp  streamscene.h
armorPlate/: README.md
armorPlate/Vison_Anglesolver-master/: AngleSolver.cpp  AngleSolver.h  README.md  test2.cpp  相机标定数据
armorPlate/conf/: MV-CA016-10UC_00G07828053.mfs
armorPlate/docs/: 框架规范.doc
armorPlate/src/: armorPlate.cpp  armorPlate.h  camera.cpp  camera.h  main.cpp  uart.cpp  uart.h  windPredict.cpp  windPredict.h
armorPlate/vscodeSet/: launch.json  settings.json  tasks.json
